MH-1298 and MH-1293 -- did a lot of dependency cleanup, fixed some broken tests, and added the missing / fixed the misaligned working file repo and workspace APIs
git-svn-id: https://opencast.jira.com/svn/MH/trunk@3638 e6edf6fb-f266-4316-afb4-e53d95876a76